// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#B4B6BA",
        "fontFamily": "SourceSansPro-Regular",
        "fontSize": 12,
        "fontStyle": "normal",
        "fontWeight": "normal",
        "lineHeight": 16,
        "textAlignVertical": "center",
        "textTransform": "none",
      },
      Object {},
    ]
  }
  testID="Text"
>
  Monday @ 1:51 PM
</Text>
`;

exports[`renders correctly with custom styling 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#B4B6BA",
        "fontFamily": "SourceSansPro-Regular",
        "fontSize": 12,
        "fontStyle": "normal",
        "fontWeight": "normal",
        "lineHeight": 16,
        "textAlignVertical": "center",
        "textTransform": "none",
      },
      Object {
        "color": "blue",
      },
    ]
  }
  testID="Text"
>
  Monday @ 1:51 PM
</Text>
`;
